edited button names and title

--- a/3.1.html
+++ b/3.1.html
@@ -6,15 +6,17 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="style.css" rel="stylesheet">
         <script defer src="script.js"></script>
-        <title>TINDER</title>
+        <title>A Dating Adventure</title>
       </head>
 <body>
     
   <div class="container">
     <h1>
-    <div id="text">It's a date! Have fun!!</div>
+    <div id="text">It's a date! Have fun!</div>
 </h1>
-     
+<button class="button">
+  <a href="welcome.html">Up for more chatting?</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
+</button>      
     </div>
   </div>
 
