--- a/2.1.html
+++ b/2.1.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="style.css" rel="stylesheet">
         <script defer src="script.js"></script>
-        <title>TINDER</title>
+        <title>A Dating Adventure</title>
       </head>
 <body>
     
@@ -14,13 +14,13 @@
     <h1>
     <div id="text">So what do you think? Fancy a dance?</div>
 </h1>
-<button class="buton">
+<button class="button">
   <a href="3.1.html">Hells yes!</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
 </button> 
-<button class="buton">
+<button class="button">
     <a href="3.2.html">Ghost him.</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
   </button> 
-  <button class="buton">
+  <button class="button">
     <a href="3.2.html">Sorry... I can't dance.</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
   </button> 
 
