--- a/2.html
+++ b/2.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="style.css" rel="stylesheet">
         <script defer src="script.js"></script>
-        <title>TINDER</title>
+        <title>A Dating Adventure</title>
       </head>
 <body>
     
@@ -14,13 +14,13 @@
     <h1>
     <div id="text">👨‍🍼🐢🕺</div>
 </h1>
-<button class="buton">
+<button class="button">
   <a href="2.1.html">Saturday night fever meets turtle?</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
 </button> 
-<button class="buton">
+<button class="button">
     <a href="2.1.html">A dancing turtle baby daddy?</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
   </button> 
-<button class="buton">
+<button class="button">
     <a href="3.1.html">Zaddy?</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
 </button> 
 
