--- a/3.2.html
+++ b/3.2.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="style.css" rel="stylesheet">
         <script defer src="script.js"></script>
-        <title>TINDER</title>
+        <title>A Dating Adventure</title>
       </head>
 <body>
     
@@ -14,7 +14,7 @@
     <h1>
     <div id="text">Looks like he unmat(t)ched you...</div>
 </h1>
-<button class="buton">
+<button class="button">
   <a href="welcome.html">Try again...</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
 </button> 
 
