--- a/3.html
+++ b/3.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="style.css" rel="stylesheet">
         <script defer src="script.js"></script>
-        <title>TINDER</title>
+        <title>A Dating Adventure</title>
       </head>
 <body>
     
@@ -14,7 +14,7 @@
     <h1>
     <div id="text">As long as you help me find the error on line 247.</div>
 </h1>
-<button class="buton">
+<button class="button">
   <a href="3.1.html">Sounds good! Tonight?</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
 </button> 
 <button class="buton">
