--- a/welcome.html
+++ b/welcome.html
@@ -15,13 +15,13 @@
 </h1>
     <div id="option-buttons">
       <button class="button">
-        <a href="1.html">Hey.</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
+        <a href="choices/1.html">Hey.</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
       </button>  
       <button class="button">
-        <a href="2.html">Describe yourself in 3 emoji's and I'll guess what you mean.</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
+        <a href="choices/2.html">Describe yourself in 3 emoji's and I'll guess what you mean.</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
       </button> 
       <button class="button">
-        <a href="3.html">Hey, my name's Microsoft. Can I crash at your place tonight?</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
+        <a href="choices/3.html">Hey, my name's Microsoft. Can I crash at your place tonight?</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
       </button>
 
     </div>
