changed one path

--- a/choices/2.1.html
+++ b/choices/2.1.html
@@ -18,7 +18,7 @@
   <a href="../endings/date.html">I thought you'd never ask!</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
 </button> 
 <button class="button">
-    <a href="../endings/ghosted.html">Ghost him.</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
+    <a href="../endings/unmatch.html">Ghost him.</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
   </button> 
   <button class="button">
     <a href="../endings/ghosted.html">Sorry... I can't dance.</a><span><i class="fa fa-arrow-circle-o-right"></i></span>
